2009-02-14  Kevin B. Kenny  <kennykb@acm.org>

	* configure.in:
	* README:		Advance verwsion to 1.0b8
	* configure:		autoconf-2.59
	
	* doc/tdbc_odbc.n:	Formatting changes so that man2html works.
	
2009-02-01  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tdbcodbc.c (StatementInitMethod): Corrected a bad check
	that caused SQLDescribeParam to be bypassed entirely. Corrected
	bad code that was exposed by this fix (SQLDescribeParam failure was
	handled incorrectly). Corrected the error code for variables in	
	native SQL syntax.
	* tests/tdbcodbc.test: Corrected error codes for seven tests, to
	match the [try]-friendly error code syntax.
	
2009-01-31  Kevin B. Kenny  <kennykb@acm.org>

	* README:	Advanced version to 1.0b7
	* configure.in:
	* configure:	autoconf 2.59
	* generic/tdbcodbc.c: Revised error codes to be more [try]-friendly.
	* tests/tdbcodbc.test: Added test cases for revised error codes,
	and for an uncovered branch in ODBC statement error handling.
	
	
2009-01-05  Kevin B. Kenny  <kennykb@acm.org>

	* README:	Advanced version to 1.0b6
	* configure.in:
	* configure:	autoconf 2.59
	
2009-01-04  Kevin B. Kenny  <kennykb@acm.org>

	* README:	Advanced version to 1.0b5
	* configure.in:
	* configure:	autoconf 2.59
	
2008-12-30  Kevin B. Kenny  <kennykb@acm.org>

	* makefile.in: Changes to make 'make dist' work.
	* README:	Advanced version to 1.0b4
	* configure.in:
	* configure:	autoconf 2.59
	
2008-12-18  Kevin B. Kenny  <kennykb@acm.org>

	* configure: Autoconf 2.59, to conform with Tcl (mandir changes
	between 2.59 and 2.61). Signed manifest.
	
2008-12-08  Kevin B. Kenny  <kennykb@acm.org>

	* doc/tdbc_odbc.n: Added man page for the driver.
	
2008-12-07  Kevin B. Kenny  <kennykb@acm.org>
	
	* configure.in:
	* generic/tdbcodbc.c:
	* library/tdbcodbc.tcl: Advanced version to 1.0b1 in preparation for
	release, and cleaned up a little bit of dependency management.
	* configure: Autoconf 2.61

2008-12-06  Kevin B. Kenny  <kennykb@acm.org>

	* configure.in: